Archive2/73/0062588222a799/output
main.cpp:22:73: error: expected primary-expression before ',' token
     static constexpr unsigned int byteoffset = offsetof( Vertex<Tn,P...>, t );
                                                                         ^
main.cpp:20:10: error: invalid use of non-static data member 'Vertex<Tn, P>::t'
     T t[n];
          ^
main.cpp:22:75: error: from this location
     static constexpr unsigned int byteoffset = offsetof( Vertex<Tn,P...>, t );
                                                                           ^
main.cpp:22:77: error: there are no arguments to 'offsetof' that depend on a template parameter, so a declaration of 'offsetof' must be available [-fpermissive]
     static constexpr unsigned int byteoffset = offsetof( Vertex<Tn,P...>, t );
                                                                             ^
main.cpp:22:77: note: (if you use '-fpermissive', G++ will accept your code, but allowing the use of an undeclared name is deprecated)
main.cpp:23:1: error: expected ';' after struct definition
 }
 ^
